...
  
  func setupSearchBar() {
    searchBar = UISearchBar()
    searchBar.placeholder = "Search recipe by ingredient"
    searchBar.searchTextField.backgroundColor = ColorHelper.customWhite
    searchBar.delegate = self
    searchBar.accessibilityIdentifier = "search-bar-by-ingredient"
  }
  
  func setupDietaryRestrictionView() {
    dietaryRestrictionView = DietaryRestrictionView(delegate: self)
  }
  
...
  func setupSearchRecipesButton() {
    searchRecipesButton = CustomButton()
    searchRecipesButton.setTitle("Search recipes", for: .normal)
    searchRecipesButton.layer.cornerRadius = 15
    searchRecipesButton.addTarget(self, action: #selector(buttonPressed), for: .touchUpInside)
    searchRecipesButton.isEnabled = false
    searchRecipesButton.accessibilityIdentifier = "search-recipes"
  }
  
  func setupUI() {
    setupSearchBar()
    setupDietaryRestrictionView()
    setupHealthRestrictionView()
...
